# EV-Battery-Chemistry-Trade-Flow-Analysis

./: .env.example  .gitignore  LICENSE  README.md  README.md.txt  app.py  pyproject.toml  render.yaml  requirements.txt
.codex/: setup.md
.codex/actions/: README.md
.github/workflows/: ci.yml  manual-smoke.yml  repo-guard.yml
apps/: __init__.py
apps/web/: __init__.py  app.py
battery_7step_site/: __init__.py  config.py  main.py
configs/: app.yaml
data/: ListOfreference.xlsx
fixtures/: README.md
modules/: config.py  data_loader.py  sankey_algo.py
sankey_core/: README.md  __init__.py  config.py  flow_builder.py  loaders.py  models.py  pipeline.py  renderer.py  requirements.txt  routes.py  run.py
sankey_web/: __init__.py  generation.py  inventory.py  settings.py  web.py
schemas/: manifest.schema.json  metal_payload.schema.json  runtime_bundle.schema.json
scripts/: dump_route_map.py  inspect_bundle.py  publish_first_optimization.py  refresh_li_co_precomputed_from_inputs.py  render_build.py  smoke_test_app.py  sync_first_optimization_from_conversion_factor_optimization.py  sync_runtime_data_layout.py  validate_repo.py  validate_runtime.py  verify_render_png.py
tests/: test_aggregate_preserve.py  test_api_bootstrap.py  test_api_figure.py  test_dataset_registry.py  test_frontend_defaults.py  test_metal_registry.py  test_monorepo_layout.py  test_pipeline.py  test_pipeline_v2.py  test_pipeline_v3.py  test_precomputed_repository.py  test_repo_layout.py  test_runtime_bundle_schema.py  test_vulnerability_sensitivity.py  test_web.py  test_web_viewer.py
(+26555 files in other folders)
