[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-flow-opt"
version = "0.1.0"
description = "Lightweight baseline extraction and trade-flow optimization prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "jinja2",
  "numpy",
  "openpyxl",
  "pandas",
  "plotly",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
