[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-battery-chemistry-trade-flow-analysis"
version = "0.1.0"
description = "Public EV battery chemistry trade-flow analysis repository with a unified web/runtime architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "jinja2",
  "numpy",
  "openpyxl",
  "pandas",
  "plotly",
  "scipy",
  "httpx",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
